# taufactor

./: .gitignore  .pyup.yml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Usage.md  basil.tif  environment.yml  example.ipynb  paper.bib  paper.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_run.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: draft-pdf.yml  python-package.yml  taufactor.yml
docs/: Makefile  Usage.md  api.rst  authors.rst  conf.py  index.rst  installation.md  installation.rst  make.bat  readme.rst  requirements.txt  taufactor.rst  usage.md  usage.rst
docs/notebooks/: 00-overview.ipynb  00-using-solvers.ipynb  01-tortuosity.ipynb  02-surface-areas.ipynb  10-tau-x-validation.ipynb  11-transmission-line-model.ipynb  12-solver-benchmark.ipynb  electrode.tiff  example.ipynb
taufactor/: __init__.py  benchmark.py  cli.py  electrode.py  metrics.py  taufactor.py  utils.py
taufactor/metrics/: __init__.py  base.py  connectivity.py  particles.py  surfaces.py
tests/: __init__.py  environment.yml  test_metrics.py  test_taufactor.py  utils.py
